--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mdio</title>
-    <script type="module" src="/main.js" defer></script>
+    <script src="/main.js" defer></script>
   </head>
 
   <body>
-
+    <div class="container">
+      <div id="output" class="output">
+      </div>
+    </div>
   </body>
 </html>
