--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+      <div id="searchPopup" class="popup">
+	  <input type="text" id="searchInput" placeholder="Type to search..." />
+	    <div id="searchResults" class="results"></div>
+     </div>
     <div class="container">
       <div id="output" class="output">
       </div>
