--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="vendor/github-dark.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mdio</title>
+    <script src="vendor/highlight.min.js"></script>
     <script type="module" src="/main.js"></script>
   </head>
 
